tests/NormalTests/paczka1/fuzzy1/14363102.err
Error in line 19: OoFhDJQ97 S210 93,0
Error in line 28: OoFhDJQ97 S377 7,6
Error in line 34: 5eE S377 27,8
